[metadata]
name = nv2a_vsh
version = 0.0.6
author = Erik Abair
author_email = erik.abair@bearbrains.work
description = Assembler/disassembler for the Xbox nv2a vertex shader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abaire/nv2a_vsh_asm
project_urls =
    Bug Tracker = https://github.com/abaire/nv2a_vsh_asm/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: The Unlicense (Unlicense)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Assembly
    Topic :: Software Development :: Assemblers

[antlr]
grammars = Vsh
visitor = yes

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = antlr4-python3-runtime ==4.7.1

[options.entry_points]
console_scripts =
    nv2avsh = nv2avsh:run_assemble
    nv2avshd = nv2avsh:run_disassemble

